edited the requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ django-cors-headers
 djangorestframework
 djangorestframework-simplejwt
 filelock
-pipenv==
-platformdirs==
+pipenv
+platformdirs
 PyJWT
 pytz
 six
